--- a/new/quarta ativ/estilo3.css
+++ b/new/quarta ativ/estilo3.css
@@ -5,7 +5,8 @@ td:hover {
 
 main {
     width: 30rem;
-    margin: 5rem auto;
+    margin: 1rem 21rem;
+
 }
 
 td {
@@ -14,25 +15,31 @@ td {
 }
 
 th {
-    background-color: aqua;
+    background-color: rgb(0, 255, 179);
     color: #009faa;
 }
 
 table {
     border-color: #ffffff;
     box-shadow: 4px 4px 4px 1px #009faa;
+    width: 40rem;
+
 }
 
 tr:nth-child(even) {
-    background-color: aquamarine;
+    background-color: rgb(149, 252, 149);
 }
 
 tr:nth-child(odd) {
-    background-color: rgb(127, 255, 255);
+    background-color: rgb(153, 240, 240);
 }
 
 html,
 body {
     font-family: 'Times New Roman', Times, serif;
+}
+
+.azul {
+  background-color: rgb(121, 121, 184);
 }
 
