--- a/new/decima atividade/estilo.css
+++ b/new/decima atividade/estilo.css
@@ -1,23 +1,23 @@
 header {
     padding: 1rem;
     background-color: #ffbbdd;
-    font-family: 'Times New Roman', Times, serif;
-    color: azure;
-    font-style: italic;
-    font-size: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .titulo {
-    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: azure;
+    font-style: italic;
+    text-align: end;
+    font-size: 30px;
 }
 
 nav {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    padding: 0.3rem;
+    padding: 0.5rem;
     background-color: #f0b0d0;
     color: white;
     display: flex;
@@ -34,45 +34,56 @@ footer {
     background-color: #ffbbdd;
     display: flex;
     justify-content: center;
+    align-content: center;
     font-size: 12px;
-    padding: 0.5rem;
+    padding: 1rem;
     color: white;
 }
-
-main {
-    margin: 1rem;
-    display: flex;
-    align-items: end;
-}
-
 
 
 .card-img-top {
     height: 200px;
-    width: 200px;
+    width: 220px;
     padding: 1rem;
-    margin-left: 1rem;
+    margin: 1rem auto;
 
-}
-
-.logoImg {
-    width: 7.83rem;
-    height: 5.2rem;
 }
 
 .card {
-    width: 15rem;
+    width: 14rem;
 }
 
 .card-body {
     background-color: #f0f0f0;
+
 }
 
 .card-title {
     text-align: center;
-    font-size: medium;
+    font-size: 14px;
 }
 
 .card-text {
     text-align: center;
+    font-size: 20px;
+}
+
+.row {
+    padding: 1rem;
+    margin: 1rem auto;
+    display: flex;
+    justify-content: center;
+}
+
+.p {
+    text-align: center;
+}
+
+.list-group {
+    background: none;
+}
+
+a {
+    text-decoration: none;
+    padding: 1rem;
 }
