--- a/new/decima atividade/estilo.css
+++ b/new/decima atividade/estilo.css
@@ -4,6 +4,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100vw;
 }
 
 .titulo {
@@ -22,6 +23,7 @@ nav {
     color: white;
     display: flex;
     justify-content: center;
+    width: 100vw;
 }
 
 html,
@@ -32,6 +34,7 @@ body {
 
 footer {
     background-color: #ffbbdd;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -46,7 +49,6 @@ footer {
     width: 220px;
     padding: 1rem;
     margin: 1rem auto;
-
 }
 
 .card {
@@ -69,7 +71,6 @@ footer {
 }
 
 .row {
-    padding: 1rem;
     margin: 1rem auto;
     display: flex;
     justify-content: center;
